--- a/vgreviews-frontend/public/index.html
+++ b/vgreviews-frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Page</title>
+    <title>Video Game Review Aggregator</title>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const form = document.getElementById("searchForm");
@@ -84,7 +84,7 @@
     </script>
 </head>
 <body>
-    <h1>Search Page</h1>
+    <h1>Video Game Review Aggregator</h1>
     <form id="searchForm">
         <input type="text" id="searchInput" placeholder="Enter your search query">
         <select id="genreDropdown">
